# hokie-fitness-api

./: .env  Cargo.toml  README.md  d2_database.csv  d2_database_1.csv
src/: config.rs  error.rs  log.rs  main.rs  model.rs  tests.rs
src/services/: csv_reader.rs  meal_calc.rs  mod.rs
src/web/: mod.rs  mw_auth.rs  routes_main.rs
