[package]
name = "hokie-fitness-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# -- Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tokio-stream = "0.1.15"
# -- Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.1.0"
# -- Web
axum = { version = "0.7", features = ["tokio"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
# -- Others
strum_macros = "0.25"
uuid = {version = "1", features = ["v4","fast-rng",]}
chrono = "0.4"
minilp = "0.2.2"
csv-async = {version = "1.3.0", features = ["with_serde","tokio",]}
dotenv = "0.15.0"

[dev-dependencies]
anyhow = "1"
axum-test = "14.4.0"
